services_k8s_test/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: default
  labels:
    io.kompose.service: backend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.org/client-max-body-size: 16m
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          - path: /explorer
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
